--- a/src/components/TaskMessageList.module.css
+++ b/src/components/TaskMessageList.module.css
@@ -28,9 +28,7 @@
 
 .contentList {
   flex: 1;
-  overflow-y: auto;
   padding: 24px;
-  max-height: calc(100vh - 100px);
   perspective: 1000px;
 }
 
